TM-1945 Fixed issue where the task manager grid would be set too wide
git-svn-id: https://opsvcs.tdsops.com/repos/tdstm/trunk@3391 fecba46a-3362-0410-80e5-8c76cdb905a0

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -540,4 +540,5 @@ td.buttons{
 #outerBodyId {
 	padding: 0px !important;
 	margin: 0px !important;
+	width: 100% !important;
 }
